2009-01-26  Mikael Morin  <mikael.morin@tele2.fr>

        PR fortran/38859
	Backport from trunk
        * simplify.c (simplify_bound): Don't use array specification
        if variable or component has subsequent references.

2009-01-26  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38657
	Backport from trunk.
	* module.c (write_common_0): Add argument 'this_module' and
	check that non-use associated common blocks are written first.
	(write_common): Call write_common_0 twice, once with true and
	then with false.

2009-01-24  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/38672
	Backport from trunk.
	* resolve.c (resolve_symbol):  Check for the
	presence of derived->ns->proc_name before
	accessing derived->ns->proc_name->attr.flavor .

2009-01-24  Release Manager

	* GCC 4.3.3 released.

2009-01-17  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38657
	* module.c (write_common_0): Revert patch of 2009-01-10.

2009-01-14  Mikael Morin  <mikael.morin@tele2.fr>

	PR fortran/35681
	* ChangeLog: Fix function name.

	PR fortran/38487
	* dependency.c (gfc_check_argument_var_dependency):
	Move the check for pointerness inside the if block
	so that it doesn't affect the return value.

	PR fortran/38669
	* trans-stmt.c (gfc_trans_call):
	Add the dependency code after the loop bounds calculation one.

2009-01-11 Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38763
	Backport from mainline:
	* target-memory.c (encode_derived): Encode NULL.

	PR fortran/38765
	Backport from mainline:
	* resolve.c (check_host_association): Use the symtree name to
	search for a potential contained procedure, since this is the
	name by which it would be referenced.

2009-01-10  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38657
	* module.c (write_common_0): Use the name of the symtree rather
	than the common block, to determine if the common has been
	written.

2009-01-10  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/38665
	* gfortran.h : Add bit to gfc_expr 'user_operator'