@@ -1,3 +1,9 @@
+2009-01-26  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/38907
+	Backport from trunk
+	* gfortran.dg/host_assoc_function_7.f90: New test.
+
 2009-01-26  Mikael Morin  <mikael.morin@tele2.fr>
 
         PR fortran/38859
